--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"bot_token": "OTgwMzY3NTY4MTYwMzA5Mjg4.GPj2Jn.3ugHYM-gA_VZh5iv6hg047CaD8IUrB2x-xmoGY",
+"bot_token": "",
 "prefix": "$",
 "channelnames": "psycho runs you", 
 "channelnames":"Get ran", 
