--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"bot_token": "OTgwMzY3NTY4MTYwMzA5Mjg4.GzKX9i.iYqZZOju2--ZnwBfWMxa2jwzY8ORUrrsOGfJr8",
+"bot_token": "",
 "prefix": "$",
 "channelnames": "psycho runs you", 
 "channelnames":"Get ran", 
